fix github pages hopefully

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=540 style="width: 960px; height: 540px; background: #231F20"></canvas>
-    <script src="/game/WebGLBuild.loader.js"></script>
+    <script src="game/WebGLBuild.loader.js"></script>
     <script src="utils.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "/game/WebGLBuild.data",
-        frameworkUrl:"/game/WebGLBuild.framework.js",
-        codeUrl: "/game/WebGLBuild.wasm",
+        dataUrl: "game/WebGLBuild.data",
+        frameworkUrl: "game/WebGLBuild.framework.js",
+        codeUrl: "game/WebGLBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Multiverse ApS",
         productName: "KoGaMa",
