--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <canvas id="unity-canvas" width=960 height=540 style="width: 960px; height: 540px; background: #231F20"></canvas>
     <script src="game/WebGLBuild.loader.js"></script>
     <script src="utils.js"></script>
+    <script src="memoryUtils.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "game/WebGLBuild.data",
